<resources>
    <string name="app_name">SnakeSweepr</string>
    <string name="forgot_name">Forgot Password</string>
    <string name="forgot_email">Email</string>
    <string name="forgot_username">Username</string>
    <string name="forgot_submit">Submit</string>
    <string name="title_activity_game">Game</string>

    <string name="home_name">SnakeSweepr</string>
    <string name="home_settings">Settings</string>
    <string name="home_game">Enter Game</string>
    <string name="home_profile">My Profile</string>

    <string name="main_create">Create</string>
    <string name="main_login">Login</string>
    <string name="main_forgot">Forgot Password</string>

    <string name="createPage_name">Create an Account</string>
    <string name="createPage_user">Username</string>
    <string name="createPage_pass">Password</string>
    <string name="createPage_firstName">First Name</string>
    <string name="createPage_lastName">Last Name</string>
    <string name="createPage_email">Email</string>
    <string name="createPage_birthday">Birthday</string>
    <string name="createPage_button">Create Account</string>

    <string name="chat_message">snakeMessage</string>
    <string name="chat_send">Send</string>

    <string name="settings_name">Settings</string>

    <string name="settings_user">User</string>
    <string name="settings_game">Game</string>
    <string name="settings_more">About the Game</string>
    <string name="settings_return">Sound</string>
    <string name="settings_bio">SnakeSweepr is a hot mess combination of two classic games that started as a bad idea we did not plan on actually executing.  Nevertheless we hope you have enjoyed this wild ride and please give us a good grade - we deserve it.</string>

    <string name="recovery_name">Enter Recovery Pin</string>
    <string name="recovery_password">New Password</string>
    <string name="recovery_submit">Submit</string>
    <string name="recovery_pin">PIN</string>

    <string name="lobby_name">Pick a Lobby</string>
    <string name="lobby_create">Create</string>
    <string name="lobby_join">Join</string>
    <string name="lobby_individual">Game Lobby</string>

    <string name="join_name">Join a Lobby</string>
    <string name="join_private">Private</string>
    <string name="join_public">Public</string>
    <string name="user_message">TextView</string>

    <string name="return_to_lobby">Return to Chat</string>
    <string name="sign_out">Sign Out</string>

    <string name="profile_name">My Profile</string>
    <string name="profile_user">Username</string>
    <string name="profile_firstName">Player Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_birthday">Birthday</string>
    <string name="player_birthday">7/7/1998</string>
    <string name="snake_score">Snake High Score</string>
    <string name="highS_score">1000</string>
    <string name="sweepr_score">Sweepr High Score</string>
    <string name="highM_score">7</string>
    <string name="user_snake_picture">User snake picture</string>

    <string name="lobby_choice">Name of Lobby</string>
    <string name="lobby_private">Private Lobby</string>

</resources>