<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snakesweepr.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="608dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/main_login" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/createPage_user"
        android:inputType="textPersonName|textCapWords"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLogin"
        android:layout_alignStart="@+id/editTextName"
        android:layout_centerInParent="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="-351dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/createPage_pass"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:text="@string/main_create"/>

    <Button
        android:id="@+id/buttonForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:text="@string/main_forgot"/>
</RelativeLayout>
