<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userProfile">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:id="@+id/TextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profilePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/profile_name"
                android:textAlignment="center"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/profilePage"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:src="@drawable/snakerotate"
                android:contentDescription="@string/user_snake_picture" />

            <TextView
                android:id="@+id/profileUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivProfile"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/profile_user"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileUser"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/profile_firstName"
                android:textSize="18sp"
                android:textStyle="italic"/>


            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/snakeScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/highS_score"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snake_score"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/sweeprScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/highM_score"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sweepr_score"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>



        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
