<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeLobby">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:id="@+id/TextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:gravity="bottom"
                android:text="@string/home_name"
                android:textAlignment="center"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/buttonChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/home_game"
                />

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/buttonChat"
                android:layout_marginTop="50dp"
                android:text="@string/home_settings"
                />


            <Button
                android:id="@+id/buttonFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/buttonSettings"
                android:layout_marginTop="50dp"
                android:text="@string/home_profile"
                />
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>